--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,19 @@ prescription to be valid</string>
     <string name="username">Hi, Himanshu</string>
     <string name="cart">cart</string>
 
+    //Headings
+    <string name="heading_one">Quick &amp; easy ordering process</string>
+    <string name="heading_two">Instant support &amp; replay</string>
+    <string name="heading_three">Easy &amp; multi soultions payment</string>
+    <string name="heading_fourth">Order from nearest, and get it fastest</string>
+
+    //Description
+    <string name="desc_one">Now you could order your medicine from nearest pharmacy from you that provide all your needs</string>
+    <string name="desc_two">Pharmacy will receive your orders and able to replay to you once you place an order and ask for help</string>
+    <string name="desc_three">You can pay on cash or online using your common methods</string>
+    <string name="desc_fourth">Search provide all nearest pharmacies that are near you, and your order will be to you in seconds</string>
+    <string name="conti">Continue</string>
+    <string name="skip">Skip</string>
+    <string name="introimg">introscreenimage</string>
+
 </resources>
