--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@ prescription to be valid</string>
     //Headings
     <string name="heading_one">Quick &amp; easy ordering process</string>
     <string name="heading_two">Instant support &amp; replay</string>
-    <string name="heading_three">Easy &amp; multi soultions payment</string>
+    <string name="heading_three">Easy &amp; multi solutions payment</string>
     <string name="heading_fourth">Order from nearest, and get it fastest</string>
 
     //Description
