--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@ prescription to be valid</string>
     <string name="skip">Skip</string>
     <string name="introimg">introscreenimage</string>
 
-    //
+    //medical prescription
     <string name="Howwouldyouliketoproceed"> How would you like to proceed ?</string>
     <string name="OrderEverythingasperprescription">Order Everything as per prescription</string>
     <string name="Callforthedetails">Call for the details</string>
@@ -54,5 +54,21 @@ prescription to be valid</string>
     <string name="Placerequest">Place request</string>
     <string name="deliveringto">Delivering to </string>
     <string name="address">123/78 ambaan nagar, muzaffarnagar</string>
+
+    //homepage
+    <string name="popular_categories">Popular Categories</string>
+    <string name="Vitaminsandsupplements">Vitamins and supplements</string>
+    <string name="Healthcaredevices">Healthcare devices</string>
+    <string name="ayurveda">Ayurveda</string>
+    <string name="order">Order</string>
+    <string name="lab_test">Lab Test</string>
+    <string name="medicine">Medicine</string>
+    <string name="doctor">Doctor</string>
+    <string name="Painreleif">Pain releif</string>
+    <string name="Sexualwellness">Sexual wellness</string>
+    <string name="skincare">Skin care</string>
+    <string name="Homeopathy">Homeopathy</string>
+    <string name="health_care">Health care</string>
+    <string name="Nutritionaldrinks">Nutritional drinks</string>
 
 </resources>
