homepage theme-night disable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,6 @@ prescription to be valid</string>
     <string name="Homeopathy">Homeopathy</string>
     <string name="health_care">Health care</string>
     <string name="Nutritionaldrinks">Nutritional drinks</string>
+    <string name="products">Products</string>
 
 </resources>
