gridlayout with recycleview on homepage productcard created other updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,6 @@ prescription to be valid</string>
     <string name="health_care">Health care</string>
     <string name="Nutritionaldrinks">Nutritional drinks</string>
     <string name="products">Products</string>
+    <string name="prefix">₹</string>
 
 </resources>
