address api added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@ prescription to be valid</string>
     <string name="ordericon">Order Now</string>
     <string name="orderbyprescription">Order By Prescription</string>
     <string name="orderprescription">Upload the prescription and tell us what you need. We do the rest.</string>
-    <string name="username">Hi, Himanshu</string>
+    <string name="username">Himanshu</string>
     <string name="cart">cart</string>
 
     //Headings
