home page updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@ prescription to be valid</string>
     <string name="address">123/78 ambaan nagar, muzaffarnagar</string>
 
     //homepage
-    <string name="popular_categories">Popular Categories</string>
+    <string name="popular_categories">Categories</string>
     <string name="Vitaminsandsupplements">Vitamins and supplements</string>
     <string name="Healthcaredevices">Healthcare devices</string>
     <string name="ayurveda">Ayurveda</string>
