User Profile Validation Done
@harshitjain156 Date of birth Regex is not Working Properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,9 @@ prescription to be valid</string>
     <string name="Nutritionaldrinks">Nutritional drinks</string>
     <string name="products">Products</string>
     <string name="prefix">₹</string>
+    <string name="invalidName">Invalid Name</string>
+    <string name="invalidEmail">Enter proper Email Address</string>
+    <string name="invalidNumber">Invalid Number</string>
+    <string name="invalidDOb">Invalid DOB</string>
 
 </resources>
